Fix counting bug in HistoryDatabase::TopHosts

Previously, HistoryDatabase::TopHosts was retrieving all visits within the past
month but adding total visit count for the URL to the host's visit count for
each visit.

What this means is that if a host had 10 visits, then the visit count would come
back as 100 (10 rows returned. all with a visit count of 10). If a host had 20
visits, then the visit count would come back as 400 (20 rows returned, all with
a visit count of 20).

This has been modified so that each visit simply increments the visit count of
the host. Furthermore, reload visits are now culled from the visits retrieved.
Previously, they were being retrieved HistoryDatabase::TopHosts() but were not
incrementing the visit count in HistoryBackend::AddPageVisit() when they were
added, so were not intended to impact the total visit count.

Additionally, the results are now sorted so that most recent visits are returned
first. This guarantees that the most recently visited hosts will be included in
the results in the case where |kMaxHostsInMemory| is reached.

Lastly, the logic for |kMaxHostsInMemory| has been modified so that it
blocks new hosts from being added to the hash map, but does not prevent the
visit counts of already existing hosts from being incremented.

A unittest has been added verifying that TopHosts works as expected and some
deprecated function cleanup has been done in HistoryServiceTest.

Bug: 846459
Change-Id: Icf02305f672bc434da6a5b8dae0d3b2690ad2f3e
Reviewed-on: https://chromium-review.googlesource.com/c/1263571
Commit-Queue: Jered Gray <jegray@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: Tarun Bansal <tbansal@chromium.org>
Cr-Commit-Position: refs/heads/master@{#597729}
Former-commit-id: 7fbc699c08b42e562ecbdab2a4f632be7fffc685